.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
    - http:
        paths:
          - path: /api/v1/service-a
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 8181
          - path: /api/v1/service-b
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 8282
